--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -46,6 +46,7 @@
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
         android:layout_height="70dp" 
+        android:id="@+id/meRelative"
         android:layout_marginBottom="15dp"
         >
         <ImageView 
@@ -87,7 +88,7 @@
     
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
-        android:layout_height="40dp" 
+        android:layout_height="48dp" 
         android:layout_marginBottom="1dp"
         >
         <ImageView 
@@ -111,7 +112,7 @@
     </RelativeLayout>
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
-        android:layout_height="40dp" 
+        android:layout_height="48dp" 
         android:layout_marginBottom="15dp"
         >
         <ImageView 
@@ -137,7 +138,7 @@
     
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
-        android:layout_height="40dp" 
+        android:layout_height="48dp" 
         android:layout_marginBottom="15dp"
         >
         <ImageView 
@@ -162,8 +163,9 @@
     
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
-        android:layout_height="40dp" 
+        android:layout_height="48dp" 
         android:layout_marginBottom="15dp"
+        android:id="@+id/meSetingTurn"
         >
         <ImageView 
             android:layout_alignParentLeft="true"
