--- a/res/layout/fragment_weichart.xml
+++ b/res/layout/fragment_weichart.xml
@@ -10,8 +10,7 @@
     <RelativeLayout 
         android:layout_width="match_parent"
         android:background="#222222"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp">
+        android:layout_height="48dp" >
         <TextView 
             android:layout_marginLeft="15dp"
             android:layout_centerVertical="true"
