--- a/res/layout/fragment_circle.xml
+++ b/res/layout/fragment_circle.xml
@@ -19,29 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="微信"
+            android:text="@string/app_title"
             android:textColor="#ffffff"
             android:id="@+id/textViewf1"/>
-        <TextView 
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="38sp"
-            android:gravity="center"
-            android:text="+"
-            android:textColor="#ffffff"
-            android:id="@+id/textViewf2"/>
-        
-        <ImageView 
-            android:layout_toLeftOf="@id/textViewf2"
-            android:layout_marginRight="15dp"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_menu_search_holo_dark"/>
-        
     </RelativeLayout>
     
     <RelativeLayout  android:layout_width="match_parent"
