--- a/res/layout/fragment_weichart.xml
+++ b/res/layout/fragment_weichart.xml
@@ -10,7 +10,8 @@
     <RelativeLayout 
         android:layout_width="match_parent"
         android:background="#222222"
-        android:layout_height="48dp" >
+        android:layout_height="48dp" 
+        android:layout_marginBottom="15dp">
         <TextView 
             android:layout_marginLeft="15dp"
             android:layout_centerVertical="true"
@@ -18,33 +19,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="微信"
+            android:text="@string/app_title"
             android:textColor="#ffffff"
-            android:id="@+id/textView1"/>
-        <TextView 
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="38sp"
-            android:gravity="center"
-            android:text="+"
-            android:textColor="#ffffff"
-            android:id="@+id/textView2"/>
-        
-        <ImageView 
-            android:layout_toLeftOf="@id/textView2"
-            android:layout_marginRight="15dp"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_menu_search_holo_dark"/>
+            android:id="@+id/textViewf1"/>
     </RelativeLayout>
+    
+    
     <ListView android:layout_width="fill_parent" 
 			  android:layout_height="wrap_content" 
 			  android:id="@+id/WeichartListItem"
-			  android:background="#ffffff"
-			  />
+			  android:background="#ffffff"/>
 
 </LinearLayout>
