--- a/res/layout/fragment_circle.xml
+++ b/res/layout/fragment_circle.xml
@@ -41,27 +41,44 @@
         <TextView 
             android:layout_toRightOf="@+id/imagef1"
             android:textSize="15sp"
-            android:text="朋友圈"
+            android:text="我的圈子"
             android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dp"/>
-        <ImageView 
-            android:layout_alignParentRight="true"
-            android:src="@drawable/girl"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:id="@+id/imagef2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
     </RelativeLayout>
     
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
         android:layout_height="48dp" 
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="15dp"
+        >
+        <ImageView 
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/all_circle"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/imagef4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+        <TextView 
+            android:layout_toRightOf="@+id/imagef4"
+            android:textSize="15sp"
+            android:text="所有圈子"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="18dp"/>
+    </RelativeLayout>
+    
+    <RelativeLayout  android:layout_width="match_parent"
+        android:background="#ffffff"
+        android:layout_height="48dp" 
+        
+        android:layout_marginBottom="15dp"
         >
         <ImageView 
             android:layout_alignParentLeft="true"
@@ -82,129 +99,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dp"/>
     </RelativeLayout>
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/yaoyiyao"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/imagef4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/imagef4"
-            android:textSize="15sp"
-            android:text="摇一摇"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
     
-    
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="1dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/nearpeople"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/imagef5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/imagef5"
-            android:textSize="15sp"
-            android:text="附近的人"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/bottle"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/imagef6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/imagef6"
-            android:textSize="15sp"
-            android:text="漂流瓶"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
-    
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="1dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/shopping"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/imagef7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/imagef7"
-            android:textSize="15sp"
-            android:text="购物"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/game"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/imagef8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/imagef8"
-            android:textSize="15sp"
-            android:text="游戏"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
     
 
 </LinearLayout>
