--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -55,92 +55,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
             android:textSize="12sp"
-            android:text="微信号：iverson2342"
+            android:text="帐户名：iverson2342"
             android:textColor="#000000"
             android:id="@+id/textView22"/>
-		<ImageView 
-		    android:layout_alignParentRight="true"
-		    android:layout_centerVertical="true"
-		    android:src="@drawable/qrcode"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"  
-		    android:layout_marginRight="20dp"/>      
     </RelativeLayout>
     
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="1dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/album"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/image31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/image31"
-            android:textSize="15sp"
-            android:text="相册"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/cube"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/image41"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-        
-        <TextView 
-            android:layout_toRightOf="@+id/image41"
-            android:textSize="15sp"
-            android:text="收藏"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
-    
-    <RelativeLayout  android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="48dp" 
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView 
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/wallet"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/image51"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        
-        <TextView 
-            android:layout_toRightOf="@+id/image51"
-            android:textSize="15sp"
-            android:text="钱包"
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"/>
-    </RelativeLayout>
     
     <RelativeLayout  android:layout_width="match_parent"
         android:background="#ffffff"
